# Deanery

./: CMakeLists.txt
bd/: groups_data.txt  students_data.txt
include/: Deanery.h  Exception.h  Group.h  Student.h  Utilities.h
src/: Deanery.cpp  Exception.cpp  Group.cpp  Student.cpp  Utilities.cpp  main.cpp
